Adding folder structure for web designs We can now insert our web diesning in the v1-n folders and we will be able to see them online at dkiker.github.io/TReaSURe (case-sensitive)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello
+<h1>List of website designs<br></h1>
+
+<h2>
+<a href="templ/v1/index.html"> Version 1 </a><br>
+<a href="templ/v2/index.html"> Version 2 </a><br>
+<a href="templ/v3/index.html"> Version 3 </a><br>
+</h2>
