Adding basic template for the first version design
Basic responsive design for the overall look of the website added.
Still need to design individual pages.

--- a/templ/v1/index.html
+++ b/templ/v1/index.html
@@ -1,3 +1,59 @@
-version 1 of the website <br>
+<head>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://getbootstrap.com/examples/sticky-footer-navbar/sticky-footer-navbar.css">
+	<link rel="stylesheet" type="text/css" href="theme.css">
+</head>
 
-<a href="../../index.html"> <h1>Back to Versions</h1> </a>
+<body>
+	<div class="container-fluid" id="head">
+		<div class="container" id="head-content">
+			<a href="index.html" class="home"> <h1> TReaSURe </h1></a>
+		</div>
+	</div>
+  
+	<div class="btn-group btn-group-justified">
+		<a href="search.html" class="btn btn-primary">Search</a>
+		<a href="history.html" class="btn btn-primary">History</a>
+		<a href="upload.html" class="btn btn-primary">Upload</a>
+		<a href="profile.html" class="btn btn-primary">Profile</a>
+	</div>
+  
+	<div class="container-fluid">
+		<h2> Version 1 - Home </h2><br>
+		<p> Roy Kilner (1890–1928) was an English professional cricketer who played nine Test matches for England between 1924 and 1926. 
+			He played for Yorkshire County Cricket Club between 1911 and 1927, scoring 1,000 runs in a season ten times and taking 100 wickets 
+			in a season five times. He first played for Yorkshire as a batsman before being wounded in the First World War. Returning in 1919
+			to a team short of bowlers, he developed into a proficient left-arm spinner. His aggressive batting and warm personality made him a 
+			popular player with both cricketers and spectators. First chosen for England in 1924, he was the second most successful bowler on the 
+			Ashes tour of 1924–25. He was selected during the 1926 Ashes series but dropped for the final Test. Kilner went on several coaching trips 
+			to India during English winters, and on one of these, in 1927–28, he contracted an illness; on his return to England, he died aged 37. His
+			funeral was attended by over 100,000 people.
+		</p>
+		<p> Roy Kilner (1890–1928) was an English professional cricketer who played nine Test matches for England between 1924 and 1926. 
+			He played for Yorkshire County Cricket Club between 1911 and 1927, scoring 1,000 runs in a season ten times and taking 100 wickets 
+			in a season five times. He first played for Yorkshire as a batsman before being wounded in the First World War. Returning in 1919
+			to a team short of bowlers, he developed into a proficient left-arm spinner. His aggressive batting and warm personality made him a 
+			popular player with both cricketers and spectators. First chosen for England in 1924, he was the second most successful bowler on the 
+			Ashes tour of 1924–25. He was selected during the 1926 Ashes series but dropped for the final Test. Kilner went on several coaching trips 
+			to India during English winters, and on one of these, in 1927–28, he contracted an illness; on his return to England, he died aged 37. His
+			funeral was attended by over 100,000 people.
+		</p>
+		<p> Roy Kilner (1890–1928) was an English professional cricketer who played nine Test matches for England between 1924 and 1926. 
+			He played for Yorkshire County Cricket Club between 1911 and 1927, scoring 1,000 runs in a season ten times and taking 100 wickets 
+			in a season five times. He first played for Yorkshire as a batsman before being wounded in the First World War. Returning in 1919
+			to a team short of bowlers, he developed into a proficient left-arm spinner. His aggressive batting and warm personality made him a 
+			popular player with both cricketers and spectators. First chosen for England in 1924, he was the second most successful bowler on the 
+			Ashes tour of 1924–25. He was selected during the 1926 Ashes series but dropped for the final Test. Kilner went on several coaching trips 
+			to India during English winters, and on one of these, in 1927–28, he contracted an illness; on his return to England, he died aged 37. His
+			funeral was attended by over 100,000 people.
+		</p>
+		
+		<br>
+	</div>
+	
+	<div class="footer">
+		<div class="container" id="foot-content">
+			<a href="../../index.html" class="versions"> <h3>Back to Versions</h3> </a>
+		</div>
+	</div>
+</body>
