Adding basic list to search page
Need to find a way to add a responsive sidebar for filtering.

--- a/templ/v1/search.html
+++ b/templ/v1/search.html
@@ -17,13 +17,44 @@
 		<a href="upload.html" class="btn btn-primary">Upload</a>
 		<a href="profile.html" class="btn btn-primary">Profile</a>
 	</div>
-  
+	
+	
+	
+	
 	<div class="container-fluid">
+	
 		<h2> Version 1 - Search </h2><br>
-		<p> This is where the user can search for materials
-		</p>
+		<div class="list-group">
+			<a href="#" class="list-group-item">
+				<h4 class="list-group-item-heading">Material One</h4>
+				<p class="list-group-item-text">Description, tags, author, etc. goes here...</p>
+			</a>
+			<a href="#" class="list-group-item">
+				<h4 class="list-group-item-heading">Material Two</h4>
+				<p class="list-group-item-text">...</p>
+			</a>
+			<a href="#" class="list-group-item">
+				<h4 class="list-group-item-heading">Material Three</h4>
+				<p class="list-group-item-text">...</p>
+			</a>
+			<a href="#" class="list-group-item">
+				<h4 class="list-group-item-heading">Material Four</h4>
+				<p class="list-group-item-text">...</p>
+			</a>
+			<a href="#" class="list-group-item">
+				<h4 class="list-group-item-heading">Material Five</h4>
+				<p class="list-group-item-text">...</p>
+			</a>
+			<a href="#" class="list-group-item">
+				<h4 class="list-group-item-heading">Material Six</h4>
+				<p class="list-group-item-text">...</p>
+			</a>
+			<a href="#" class="list-group-item">
+				<h4 class="list-group-item-heading">Material Seven</h4>
+				<p class="list-group-item-text">...</p>
+			</a>
+		</div>
 		
-		<br>
 	</div>
 	
 	<div class="footer">
