--- a/Prototypes/History.html
+++ b/Prototypes/History.html
@@ -23,16 +23,16 @@
                        <span class="icon-bar"></span>
                        <span class="icon-bar"></span>
                    </button>
-                   <a class="brand" href="http://localhost:8000/treasure/">TReaSURe</a>
+                   <a class="brand" href="Treasure - Home.html">TReaSURe</a>
 
                    <div class="nav-collapse collapse">
                        <ul class="nav pull-right">
-                            <li><a href="http://localhost:8000/treasure/profile">Profile</a></li>                          
+                            <li><a href="Profile.html">Profile</a></li>                          
                        </ul>
                        <ul class="nav">
-                           <li><a href="http://localhost:8000/treasure/search">Search</a></li> 
-                           <li><a href="http://localhost:8000/treasure/history">History</a></li> 
-                           <li><a href="http://localhost:8000/treasure/add_material">Upload</a></li> 
+                           <li><a href="Search.html">Search</a></li> 
+                           <li><a href="History.html">History</a></li> 
+                           <li><a href="Upload.html">Upload</a></li> 
                        </ul>
                    </div>
                    <!--/.nav-collapse -->
@@ -56,7 +56,7 @@
         
         <div class="footer">
             <div class="container" id="foot-content">
-                <a href="http://localhost:8000/treasure/about"><h4>About</h4></a>
+                <a href="About.html"><h4>About</h4></a>
             </div>
         </div>
 
