--- a/Prototypes/Upload.html
+++ b/Prototypes/Upload.html
@@ -51,7 +51,26 @@
         <p>body of text</p>
     </div>
 </div>
-
+<div class="bs-docs-example">
+            <div class="tabbable tabs-left">
+              <ul class="nav nav-tabs">
+                <li class=""><a href="#lA" data-toggle="tab">Upload New Material</a></li>
+                <li class=""><a href="#lB" data-toggle="tab">Select Tags</a></li>
+                <li class="active"><a href="#lC" data-toggle="tab">Add Description</a></li>
+              </ul>
+              <div class="tab-content">
+                <div class="tab-pane" id="lA">
+                  <p>Open file.</p>
+                </div>
+                <div class="tab-pane" id="lB">
+                  <p>Select/Add New tags.</p>
+                </div>
+                <div class="tab-pane active" id="lC">
+                  <p>Write Description...</p>
+                </div>
+              </div>
+            </div> <!-- /tabbable -->
+          </div>
         </div>
         
         <div class="footer">
