Adding html templates for materials/uploads
Also created an evolved.html page for uploading of new versions of
materials and changed the search page to add more filters

--- a/templ/v2/Material.html
+++ b/templ/v2/Material.html
@@ -50,20 +50,23 @@
 		    <h3>by Scott</h3>
 		    <p><strong>Description:</strong> A resource to teach objected oriented programming using python to advanced higher students</p>
 		    <br>
-		    <p><strong>Tags</strong> <em>Python, Object Oriented Programming, Advanced Higher, programming</em></p>
+		    <p><strong>Tags</strong> <em>Python, Object Oriented Programming</em></p>
 		</div>
 		<div class="span3">
 			<div style="height:150px;width:150px;background-color:blue"></div>
 			<hr>
+		    <p><strong>Level:</strong><br> <em>Advanced Higher</em></p><br>
+            <p><strong>Topic:</strong><br> <em>Programming: Concepts</em></p>
+            <hr>
 			<ul>
 				<li>Download</li>
-				<li>Evolve</li>
+				<li><a href="Evolve.html">Evolve</a></li>
 			</ul>
 			<hr>
 			<ul>
-	    			<li>Track</li>
-	    			<li>View Versions</li>
-	    		</ul>
+                <li>Track</li>
+                <li>View Versions</li>
+            </ul>
 	    	</div>
 	   </div>
 	   <br><br><br>
