Slight fix for template paths

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>List of website designs<br></h1>
 
 <h2>
-<a href="templ/v1/index.html"> Version 1 - basic bootsrap and css tests </a><br>
-<a href="Treasure - Home.html"><h1>version 2 </h1></a>
+<a href="templ/v1/index.html"> Version 1 - basic bootstrap and css tests </a><br>
+<a href="templ/v2/Treasure - Home.html"><h1>version 2 </h1></a>
 <!--a href="templ/v3/index.html"> Version 3 </a><br-->
 </h2>
